# Q2.-Simulated-distributed-client

./: Cargo.toml  README.md
src/: aggregator.rs  client.rs  lib.rs  main.rs
