[package]
name = "simulated_distributed_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = "2"
futures-util = "0.3"